# ghost-auth

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release.yml
docs/: ADDING_LANGUAGE_SUPPORT.md  CLA.md  TRANSLATION_GUIDE.md
e2e/: app.spec.ts  helpers.ts
extension/: README.md  manifest.chrome.json  manifest.edge.json  manifest.firefox.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
extension/src/: vite-env.d.ts
extension/src/background/: service-worker.ts
extension/src/content/: qr-scanner.ts
extension/src/core/: backup.test.ts  backup.ts  browser.ts  constants.ts  crypto.test.ts  crypto.ts  pin.test.ts  pin.ts  storage.test.ts  storage.ts  sync-code.test.ts  sync-code.ts  sync-protocol.test.ts  sync-protocol.ts  sync-qr.ts  sync-ws-client.ts  totp.test.ts  totp.ts  types.ts
extension/src/popup/: App.svelte  index.html  main.ts  theme-init.js
extension/src/test/: setup.ts
patches/tauri-plugin-barcode-scanner/: Cargo.toml
patches/tauri-plugin-edge-to-edge/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs  package.json
patches/tauri-plugin-icloud-sync/: Cargo.toml  build.rs
patches/tauri-plugin-icloud-sync/ios/: Package.swift
patches/tauri-plugin-icloud-sync/ios/Sources/: ICloudSyncPlugin.swift
patches/tauri-plugin-icloud-sync/permissions/autogenerated/: reference.md
patches/tauri-plugin-icloud-sync/permissions/autogenerated/commands/: check_icloud_available.toml  delete_cloud_sync_key.toml  load_cloud_sync_key.toml  read_cloud_blob.toml  store_cloud_sync_key.toml  write_cloud_blob.toml
patches/tauri-plugin-icloud-sync/permissions/schemas/: schema.json
patches/tauri-plugin-icloud-sync/src/: lib.rs
patches/tauri-plugin-share-file/: Cargo.toml  build.rs
patches/tauri-plugin-share-file/ios/: Package.swift
patches/tauri-plugin-share-file/ios/Sources/: ShareFilePlugin.swift
patches/tauri-plugin-share-file/permissions/autogenerated/: reference.md
patches/tauri-plugin-share-file/permissions/schemas/: schema.json
patches/tauri-plugin-share-file/src/: lib.rs
shared/: styles.ts
shared/components/: About.svelte  CheckIcon.svelte  CountdownRing.svelte  EditAccount.svelte  Modal.svelte  PinRemove.svelte  PinSetup.svelte  RecoveryCodes.svelte  Toast.svelte
shared/stores/: toast.ts
shared/utils/: error.ts  focusTrap.ts  otpauth.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  crash_reporter.rs  google_auth_proto.rs  icloud.rs  import.rs  keystore.rs  lib.rs  main.rs  pin.rs  storage.rs  sync.rs  sync_transport.rs  sync_ws.rs  totp.rs
src/lib/: styles.ts
src/lib/i18n/: index.ts
src/test/: setup.ts
test-fixtures/qr-images/: README.md
web/: index.html  robots.txt  sitemap.xml
web/cryptography/: index.html
web/help/: index.html
web/privacy/: index.html
(+185 files in other folders)
