[package]
name = "tauri-plugin-icloud-sync"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-icloud-sync"

[lib]
name = "tauri_plugin_icloud_sync"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
base64 = "0.22"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
