[package]
name = "tauri-plugin-share-file"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-share-file"

[lib]
name = "tauri_plugin_share_file"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
